syntax = "proto3";

package user;
option java_multiple_files = true; 
option java_package = "org.bazarteer.userservice.proto";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string name = 1;
  string surname = 2;
  string username = 3;
  string bio = 4;
  string image = 5;
  string password = 6; 
  string googleToken = 7;
}

message RegisterResponse {
  string userId = 1;
  string username = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string userId = 1;
  string username = 2;
}
