syntax = "proto3";

package user;
option java_multiple_files = true; 
option java_package = "org.bazarteer.userservice.proto";

service UserService {
  rpc Update (UpdateRequest) returns (UpdateResponse);

  rpc GetById (GetByIdRequest) returns (GetByIdResponse);
}

message UpdateRequest {
  string userId = 1;
  string image = 2;
  string bio = 3;
}

message UpdateResponse {
  string userId = 1;
}

message GetByIdRequest {
  string userId = 1;
}

message GetByIdResponse {
  string id = 1;
  string name = 2;
  string surname = 3;
  string username = 4;
  string bio = 5;
  string image = 6;
  int32 num_sales = 7;
}


